--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@types/bootstrap": "^5.2.6",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "rxjs": "~7.8.0",
